# MAC-Telnet

./: .clang-format  .dockerignore  .editorconfig  .gitignore  .travis.yml  Dockerfile  Makefile  Makefile.am  README.markdown  autogen.sh  autologin.c  config.h  configure.ac  console.c  console.h  devices.c  devices.h  interfaces.c  interfaces.h  macping.c  mactelnet.c  mactelnet.h  mactelnetd.c  main.c  main2.c  mndp.c  mndp.h  protocol.c  protocol.h  travis-before_install.sh  travis-linux.sh  travis-osx.sh  udp.c  udp.h  users.c  users.h  utlist.h
.docker/: centos.sh  centos7.sh
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yaml  docker.yaml  dockerhub_deploy.yml
.travis/: before_install.sh  install-gettext.sh  script.sh
config/: Makefile.am  mactelnet.spec  mactelnetd.users
debian/: README  changelog  conffiles  control  copyright  rules
doc/: Makefile.am  macping.1  mactelnet.1  mactelnetd.1.in  mactelnetd.8  mactelnetd.8.in
docs/: mactelnet.1  mactelnetd.1
m4/: .place_holder
po/: ChangeLog  LINGUAS  Makefile.in.in  Makevars  POTFILES.in  bg.po  mactelnet.pot  nb.mo  nb.po
src/: Makefile.am  autologin.c  autologin.h  console.c  console.h  extra.h  interfaces.c  interfaces.h  macping.c  mactelnet.c  mactelnet.h  mactelnetd.c  mndp.c  mtwei.c  mtwei.h  protocol.c  protocol.h  users.c  users.h
